fix: fixed bugs, added swagger
