# docs/swagger.yaml
@@ -30,6 +30,55 @@ definitions:
     - password
     - username
     type: object
+  store.Cell:
+    properties:
+      arfcn:
+        type: integer
+      c_i:
+        type: number
+      cell_identity:
+        type: integer
+      cell_tech:
+        type: string
+      created_at:
+        type: string
+      ecn0:
+        type: number
+      frequency_band:
+        type: string
+      frequency_mhx:
+        type: number
+      generated_at:
+        type: string
+      id:
+        type: integer
+      lac:
+        type: integer
+      lat:
+        type: number
+      long:
+        type: number
+      plmn:
+        type: string
+      rac:
+        type: integer
+      rscp:
+        type: integer
+      rsrp:
+        type: integer
+      rsrq:
+        type: number
+      rxlev:
+        type: integer
+      rxqual:
+        type: integer
+      sinr:
+        type: number
+      tac:
+        type: integer
+      user_id:
+        type: integer
+    type: object
   store.Role:
     properties:
       description:
@@ -129,6 +178,32 @@ paths:
       summary: Registers a user
       tags:
       - authentication
+  /cells/:
+    get:
+      consumes:
+      - application/json
+      description: Fetches all cells
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Cell'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Fetches cells
+      tags:
+      - cell
   /users/{id}:
     get:
       consumes:
